Native/Test/KL/struct-errors.out
struct-errors.kl:7:3: error: 'UnregisteredType': type not registered
struct-errors.kl:7:3: error: member 'a': type 'UnregisteredType' not registered
struct-errors.kl:16:1: error: type 'Bar' already registered with a different definition
